Fixed 5.2.1-SNAPSHOT build, not upgrading all dependencies and plugins; can build with java18