@@ -40,7 +40,7 @@
   </modules>
 
   <properties>
-    <java.version>1.6</java.version>
+    <java.version>7</java.version>
     <github.global.server>github</github.global.server>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -158,11 +158,11 @@
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.8</version>
             <extensions>true</extensions>
             <configuration>
               <serverId>ossrh</serverId>
               <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-              <!--                             <autoReleaseAfterClose>true</autoReleaseAfterClose> -->
             </configuration>
           </plugin>
           <plugin>
@@ -356,8 +356,6 @@
                     <exclude>aspectj:aspectj*</exclude> <!-- org.aspectj is the new one -->
                     <exclude>hsqldb:hsqldb</exclude> <!-- org.hsqldb is the new one -->
                     <exclude>org.springframework</exclude>
-                    <exclude>com.sun.xml.bind</exclude>
-                    <exclude>javax.xml.bind</exclude>
                     <exclude>net.sf.saxon</exclude>
                     <exclude>c3p0:c3p0</exclude> <!-- com.mchange:c3p0 is the new one -->
                     <exclude>org.apache.commons:com.springsource.org.apache.commons.logging</exclude>
@@ -393,8 +391,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <testFailureIgnore>false</testFailureIgnore>
-          <!-- enable assertions during the tests -->
-          <argLine>-ea</argLine>
+          <argLine>-ea --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -475,6 +472,23 @@
         <version>${logback.version}</version>
         <optional>true</optional>
       </dependency>
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-core</artifactId>
+        <version>2.3.0</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.3.0</version>
+        <scope>runtime</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -503,6 +517,18 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+    </dependency>
   </dependencies>
 
   <repositories>
@@ -523,10 +549,12 @@
     <repository>
       <id>ebi-repo</id>
       <name>The EBI internal repository</name>
-      <url>http://www.ebi.ac.uk/~maven/m2repo</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
+      <url>https://www.ebi.ac.uk/~maven/m2repo</url>
+    </repository>
+    <repository>
+      <id>intact.nexus</id>
+      <name>IntAct Nexus</name>
+      <url>https://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
     </repository>
   </repositories>
 
@@ -582,7 +610,6 @@
         <version>${maven-project-info-reports-plugin.version}</version>
         <configuration>
           <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
         </configuration>
         <reportSets>
           <reportSet>
@@ -590,16 +617,12 @@
               <report>index</report>
               <report>summary</report>
               <report>modules</report>
-              <!--                             <report>cim</report> -->
               <report>dependencies</report>
-              <!--                             <report>dependency-convergence</report> -->
               <report>dependency-info</report>
               <report>dependency-management</report>
               <report>distribution-management</report>
               <report>issue-tracking</report>
               <report>license</report>
-              <!--                             <report>plugin-management</report> -->
-              <!--                             <report>plugins</report> -->
               <report>project-team</report>
               <report>mailing-list</report>
               <report>scm</report>
